--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitest/ui": "2.1.0",
     "c8": "7.12.0",
     "cspell": "^8.13.3",
+    "dependency-cruiser": "^16.5.0",
     "embedme": "1.22.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
