--- a/packages/evm/tsconfig.json
+++ b/packages/evm/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../config/tsconfig.json",
-  "include": ["src/**/*.ts", "src/**/*.json", "test/**/*.ts", "../util/src/asyncemitter.ts"]
+  "include": ["src/**/*.ts", "src/**/*.json", "test/**/*.ts", "../util/src/asyncemitter.ts"],
+  "compilerOptions": {
+    "allowImportingTsExtensions": true
+  }
 }
