--- a/packages/evm/tsconfig.json
+++ b/packages/evm/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "../../config/tsconfig.json",
-  "include": ["src/**/*.ts", "src/**/*.json", "test/**/*.ts", "../util/src/asyncemitter.ts"],
-  "compilerOptions": {
-    "allowImportingTsExtensions": true
-  }
+  "include": ["src/**/*.ts", "src/**/*.json", "test/**/*.ts", "../util/src/asyncemitter.ts"]
 }
