--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "examples": "npm run examples --workspaces --if-present",
     "examples:build": "npm run examples:build --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
-    "lint:fix": "npm run lint:fix --workspaces --if-present",
+    "lint:fix": "npm run lint:fix -w-workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
     "test:node": "npm run test:node --workspaces --if-present",
     "test:browser": "npm run test:browser --workspaces --if-present",
