Synthesizer supports all target opcodes. Many bugs in resolving data aliasing are catched.

--- a/packages/evm/.vscode/launch.json
+++ b/packages/evm/.vscode/launch.json
@@ -6,7 +6,7 @@
         "request": "launch",
         "name": "Launch with tsx",
         "runtimeExecutable": "tsx",
-        "program": "${workspaceFolder}/examples/callcodes.ts",
+        "program": "${workspaceFolder}/examples/EnvBlockKeccak.ts",
         "args": [],
         "cwd": "${workspaceFolder}",
         "skipFiles": ["<node_internals>/**"],
