--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -61,6 +61,7 @@
     "@ethereumjs/statemanager": "^2.4.0",
     "@ethereumjs/util": "^9.1.0",
     "@types/debug": "^4.1.9",
+    "app-root-path": "^3.1.0",
     "debug": "^4.3.3",
     "ethereum-cryptography": "^3.0.0",
     "eventemitter3": "^5.0.1"
@@ -82,7 +83,8 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "rustbn-wasm": "^0.4.0",
     "solc": "^0.8.1",
-    "split": "^1.0.1"
+    "split": "^1.0.1",
+    "typescript": "^4.7.2"
   },
   "engines": {
     "node": ">=18"
